--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3",
     "consolidate": "^0.15.1",
+    "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11"
   },
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
+    "start": "node app.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
